--- a/app/src/main/res/layout/fragment_preview.xml
+++ b/app/src/main/res/layout/fragment_preview.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rl_camera"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.caioferrari.videoapp.view.fragment.PreviewFragment">
+    tools:mContext="com.example.caioferrari.videoapp.view.fragment.PreviewFragment">
 
     <VideoView
         android:id="@+id/vv_preview"
