--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="50dp"
-        android:background="#7f747474"
+        android:background="@color/button_unselected"
         android:text="@string/video_shoot"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:layout_marginStart="50dp"
-        android:background="#a4e0ac62"
+        android:background="@color/feed_selected"
         android:text="@string/video_feed"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -49,7 +49,7 @@
         android:layout_width="90dp"
         android:layout_height="5dp"
         android:layout_marginStart="48dp"
-        android:background="#a4e0ac62"
+        android:background="@color/feed_selected"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
